# spotify-downloader

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.env  config.py  cookies.txt  database.py  docker-compose.yml  example.env  install.sh  main.py  models.py  opencode session (for every plan).txt  pyproject.toml  requirements.txt  services.py  strings.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.mimocode/plans/: 1782935004345-nimble-engine.md
handlers/: callbacks.py  download.py  inline.py  start.py  states.py
handlers/admin/: __init__.py  broadcast.py  channels.py  log_channel.py  panel.py  settings.py
plugins/: __init__.py  cache.py  deezer.py  download_manager.py  spotdl.py  ytdl.py  ytmusic.py
utils/: __init__.py  helpers.py  keyboards.py  log_channel_handler.py  rate_limiter.py
