[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Spotify-Downloader"
version = "2.0.0"
description = "Telegram bot for downloading music from Spotify using spotDL"
requires-python = ">=3.12"
dependencies = [
    "spotdl>=4.5.0",
    "tgcrypto",
    "pyrogram>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "structlog>=24.0.0,<27.0.0",
    "requests>=2.34.2,<3.0.0",
    "psutil>=5.9.0,<6.0.0",
    "musicbrainzngs>=0.7.1,<1.0.0",
]

[tool.setuptools]
py-modules = ["config", "database", "models", "services", "strings"]
packages = ["handlers", "handlers.admin", "utils", "plugins"]
